@@ -383,7 +383,8 @@ array(2) {
   }
 }
 [011]
-NULL
+array(0) {
+}
 [013]
 array(2) {
   [0]=>
@@ -402,7 +403,8 @@ array(2) {
   }
 }
 [016]
-NULL
+array(0) {
+}
 [017]
 array(1) {
   [0]=>
